--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hungry Monster Fardin 😝 </title>
+    <title>Hungry Monster Fardin  </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
     <link rel="stylesheet" href="style.css">
@@ -50,7 +50,16 @@
                     <button class="btn btn_color p-3" type="button" id="search_btn">Search</button>
                   </div>
 			</form>
-			
+			<!-- single meal information  -->
+
+			<div class="single_meal_info">
+				<img alt="" class="img-fluid" id="single_img">
+				<h2 id='meal_headline'></h2>
+				<div id="single_meal_ingredients">
+					<ul id="ingredient_list"></ul>
+				</div>
+				
+			</div>
 			<!-- all meal container  -->
 
             <div class="contaier" id="mealsContainer">
@@ -58,16 +67,7 @@
             </div>
 			
 			
-			<!-- single meal information  -->
-
-			<div class="single_meal_info">
-				<img alt="" id="single_img">
-				<h2 id='meal_headline'></h2>
-				<div id="single_meal_ingredients">
-
-				</div>
-				
-			</div>
+			
         </div>
     </main>
 
