--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
     
     <header class="pt-3">
+
+		<!-- navbar section  -->
         <nav class="navbar navbar-expand-lg navbar-light bg-transparent container">
 			<div class="container-fluid">
 				<a class="navbar-brand w-50" href="#"><img src="images/logo.png" class="img-fluid w-25" alt=""></a>
