--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <form class="col-md-6 m-auto py-5">
                 <div class="input-group mb-3">
                     <input type="text" class="form-control p-3" placeholder="Search For Meal" aria-label="Search meal" id="meal_name_input" >
-                    <button class="btn btn_color p-3" type="button" id="search_btn">Search</button>
+                    <button class="btn btn_color p-3" type="button" id="search_btn" onclick="inputValueGet()">Search</button>
                   </div>
 			</form>
 			<!-- single meal information  -->
