--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
 				</div>
 				
 			</div>
+			<!-- error message  -->
+
+			<h2 id="error_msg"></h2>
 			<!-- all meal container  -->
 
             <div class="contaier" id="mealsContainer">
